--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-environ==0.12.0
 django-rest-auth==0.9.5
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
+mysqlclient==2.2.7
 PyJWT==2.10.1
 six==1.17.0
 sqlparse==0.5.3
