--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 myvenv
 myvenv/
+newvenv/
+newvenv
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django
