--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 Django==4.2.17
 django-allauth==65.3.1
 django-cors-headers==4.6.0
@@ -6,8 +8,11 @@ django-environ==0.12.0
 django-rest-auth==0.9.5
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
+idna==3.10
 mysqlclient==2.2.7
 PyJWT==2.10.1
+requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
+urllib3==2.3.0
