--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,8 +19,6 @@ services:
     entrypoint:
       - sh
       - config/docker/entrypoint.prod.sh 
-    depends_on:
-      - redis
       
   nginx:
     container_name: nginx
@@ -32,6 +30,8 @@ services:
       - "80:80"
     depends_on:
       - web
+    environment:
+      TZ: "Asia/Seoul"
 
 
 volumes:
