--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 asgiref==3.8.1
-Django==4.2.17
+Django==4.2.7
 django-allauth==65.3.1
-django-cors-headers==4.6.0
+django-cors-headers==3.12.0
 django-environ==0.12.0
 django-rest-auth==0.9.5
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.4.0
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
-mysqlclient==2.2.7
+# mysqlclient==2.2.7
 packaging==24.2
 PyJWT==2.10.1
 six==1.17.0
