--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
 # mysqlclient==2.2.7
 packaging==24.2
-PyJWT==2.10.1
+PyJWT==2.8.0
 six==1.17.0
-sqlparse==0.5.3
+sqlparse==0.4.4
 typing_extensions==4.12.2
-tzdata==2025.1
+tzdata
 requests
