--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,6 +15,8 @@ ENV PYTHONUNBUFFERED 1
 # install psycopg2 dependencies
 RUN apk update && apk add python3 python3-dev mariadb-dev build-base && pip3 install mysqlclient
 
+RUN apk add --no-cache libffi-dev openssl-dev rust cargo
+
 # dependencies for pillow
 RUN apk add --no-cache jpeg-dev zlib-dev
 RUN apk add --no-cache --virtual .build-deps linux-headers
