--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,7 +14,12 @@ ENV PYTHONUNBUFFERED 1
 # install psycopg2 dependencies
 RUN apk update && apk add python3 python3-dev mariadb-dev build-base && pip3 install mysqlclient
 
-RUN apk add --no-cache libffi-dev openssl-dev rust cargo
+# install dependencies for cryptography (including rust via rustup)
+RUN apk add --no-cache libffi-dev openssl-dev curl
+
+# install latest rust using rustup
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 # dependencies for pillow
 RUN apk add --no-cache jpeg-dev zlib-dev
