--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -11,7 +11,7 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# 최소 의존성만 설치
+# 종속성 설치 (Rust 없이 최소 패키지)
 RUN apk add --no-cache \
     python3-dev \
     mariadb-dev \
@@ -24,14 +24,10 @@ RUN apk add --no-cache \
     curl \
     && rm -rf /var/cache/apk/*
 
-# rust 최신 버전 설치 (기본 툴체인만)
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --profile minimal --default-toolchain stable
-ENV PATH="/root/.cargo/bin:${PATH}"
+# pip 업그레이드 (중요: cryptography wheel 지원 받기 위함)
+RUN pip install --upgrade pip setuptools wheel && pip install --only-binary cryptography cryptography==39.0.2
 
-# pip 최신화
-RUN pip install --upgrade pip
-
-# requirements 복사 및 wheel 빌드
+# requirements 복사 및 설치
 COPY ./requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
