--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -59,10 +59,9 @@ RUN apk update && apk add libpq
 RUN apk update \
     && apk add --virtual build-deps gcc python3-dev musl-dev \
     && apk add --no-cache jpeg-dev zlib-dev mariadb-dev
-COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install mysqlclient
-RUN pip install --no-cache /wheels/*
 RUN apk del build-deps
 
 # copy entrypoint-prod.sh
