--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,18 +1,14 @@
 # BUILDER #
 ###########
 
-# pull official base image
 FROM python:3.8.3-alpine as builder
 
-# set work directory
 WORKDIR /usr/src/app
 
-# set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-
-# 필수 패키지만 설치
+# 필수 패키지 설치
 RUN apk add --no-cache \
     python3-dev \
     mariadb-dev \
@@ -25,10 +21,11 @@ RUN apk add --no-cache \
     curl \
     && rm -rf /var/cache/apk/*
 
-# pip 최신화 및 cryptography 미리 설치
+# pip 최신화 및 cryptography 사전 빌드 (Rust 없이 설치 가능하도록)
 RUN pip install --upgrade pip setuptools wheel && \
     pip install --only-binary cryptography cryptography==39.0.2
 
+# 휠 빌드
 COPY ./requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
@@ -37,41 +34,39 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requir
 # FINAL #
 #########
 
-# pull official base image
 FROM python:3.8.3-alpine
 
-# create directory for the app user
-RUN mkdir -p /home/app
-
-# create the app user
+# 시스템 기본 설정
 RUN addgroup -S app && adduser -S app -G app
 
-# create the appropriate directories
 ENV HOME=/home/app
 ENV APP_HOME=/home/app/web
-RUN mkdir $APP_HOME
-RUN mkdir $APP_HOME/static
-RUN mkdir $APP_HOME/media
+RUN mkdir -p $APP_HOME/static $APP_HOME/media
 WORKDIR $APP_HOME
 
-# install dependencies
-RUN apk update && apk add libpq
-RUN apk update \
-    && apk add --virtual build-deps gcc python3-dev musl-dev \
-    && apk add --no-cache jpeg-dev zlib-dev mariadb-dev
+# 필요 패키지 설치
+RUN apk add --no-cache \
+    libpq \
+    libffi-dev \
+    openssl-dev \
+    jpeg-dev \
+    zlib-dev \
+    mariadb-dev \
+    gcc \
+    python3-dev \
+    musl-dev
+
+# 빌드된 휠 및 의존성 설치
+COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install mysqlclient
-RUN apk del build-deps
+RUN pip install --no-cache /wheels/*
 
-# copy entrypoint-prod.sh
+# 빌드 의존성 삭제
+RUN apk del gcc python3-dev musl-dev mariadb-dev
+
+# 프로젝트 복사 및 권한 설정
 COPY ./config/docker/entrypoint.prod.sh $APP_HOME
-
-# copy project
 COPY . $APP_HOME
-
-# chown all the files to the app user
 RUN chown -R app:app $APP_HOME
 
-# change to the app user
 USER app
