fix/Dockerfile.prod

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -9,7 +9,7 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# 필수 패키지 설치
+# 필수 빌드 패키지 설치
 RUN apk add --no-cache \
     python3-dev \
     mariadb-dev \
@@ -24,15 +24,9 @@ RUN apk add --no-cache \
 # pip 최신화
 RUN pip install --upgrade pip setuptools wheel
 
-# cryptography는 Rust 없이 설치 가능한 wheel을 미리 설치
-RUN pip install --only-binary cryptography cryptography==39.0.2
-
-# requirements.txt에서 cryptography 제외 → 별도 설치 처리
+# requirements 복사 및 wheel 생성 (전체)
 COPY ./requirements.txt .
-RUN grep -v "cryptography" requirements.txt > requirements_nocrypto.txt
-
-# 휠 파일 생성 (cryptography 제외)
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements_nocrypto.txt
+RUN pip wheel --no-cache-dir --wheel-dir /usr/src/app/wheels -r requirements.txt
 
 
 #########
@@ -41,14 +35,14 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requir
 
 FROM python:3.8.3-alpine
 
-# 사용자 및 앱 디렉토리 설정
+# 사용자 및 작업 디렉토리 설정
 RUN addgroup -S app && adduser -S app -G app
 ENV HOME=/home/app
 ENV APP_HOME=/home/app/web
 RUN mkdir -p $APP_HOME/static $APP_HOME/media
 WORKDIR $APP_HOME
 
-# 런타임 패키지 설치
+# 런타임 패키지 설치 (최소한)
 RUN apk add --no-cache \
     libpq \
     libffi-dev \
@@ -56,23 +50,16 @@ RUN apk add --no-cache \
     jpeg-dev \
     zlib-dev
 
-# 빌드 시 필요한 컴파일러 임시 설치 (backports.zoneinfo 등 대비)
-RUN apk add --no-cache gcc musl-dev python3-dev
-
-# 빌더 단계에서 휠 파일 및 requirements 복사
+# 빌더 단계에서 wheel 및 requirements 복사
 COPY --from=builder /usr/src/app/wheels /wheels
-COPY --from=builder /usr/src/app/requirements_nocrypto.txt .
 COPY --from=builder /usr/src/app/requirements.txt .
 
-# 휠 설치 → cryptography 설치 → pip 정리
-RUN pip install --no-cache-dir /wheels/* && \
-    pip install --only-binary cryptography cryptography==39.0.2 && \
-    apk del gcc musl-dev python3-dev
+# 휠 파일 설치 (여기서 cryptography도 함께 설치됨)
+RUN pip install --no-cache-dir /wheels/*
 
-# entrypoint 및 프로젝트 코드 복사
+# 프로젝트 복사 및 권한 설정
 COPY ./config/docker/entrypoint.prod.sh $APP_HOME
 COPY . $APP_HOME
-
-# 권한 설정
 RUN chown -R app:app $APP_HOME
+
 USER app
