--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,8 @@ services:
       DJANGO_SETTINGS_MODULE: WDYS.settings.prod
     env_file:
       - .env
+    ports:
+      - "8080:8000"  
     volumes:
       - static:/home/app/web/static
       - media:/home/app/web/media
