--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,70 +1,46 @@
 ###########
 # BUILDER #
 ###########
-
-FROM python:3.8.3-alpine as builder
-
+FROM python:3.11-slim AS builder
 WORKDIR /usr/src/app
+ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        build-essential \
+        pkg-config \
+        default-libmysqlclient-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# 필수 빌드 패키지 설치
-RUN apk add --no-cache \
-    python3-dev \
-    mariadb-dev \
-    build-base \
-    libffi-dev \
-    openssl-dev \
-    jpeg-dev \
-    zlib-dev \
-    linux-headers \
-    curl
-
-# pip 최신화
-RUN pip install --upgrade pip setuptools wheel
-
-# requirements 복사 및 wheel 생성 (전체)
-COPY ./requirements.txt .
-RUN pip wheel --no-cache-dir --wheel-dir /usr/src/app/wheels -r requirements.txt
+COPY requirements.txt .
+RUN pip install --upgrade pip setuptools wheel \
+ && pip wheel --no-cache-dir --prefer-binary -r requirements.txt -w /usr/src/app/wheels
 
 #########
 # FINAL #
 #########
-FROM python:3.8.3-alpine
+FROM python:3.11-slim
 
-RUN addgroup -S app && adduser -S app -G app
-ENV HOME=/home/app
-ENV APP_HOME=/home/app/web
-RUN mkdir -p $APP_HOME/static $APP_HOME/media
-WORKDIR $APP_HOME
+ENV PYTHONUNBUFFERED=1
+WORKDIR /home/app/web
 
-# 런타임 패키지 (필요한 라이브러리만) ----------------------------------------
-RUN apk add --no-cache \
-    libpq \
-    libffi \
-    openssl \
-    jpeg \
-    zlib \
-    mariadb-dev \
-    gcc \
-    musl-dev \
-    python3-dev
+# 런타임 라이브러리만 (mysqlclient는 libmariadb3로 링크됨)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        libmariadb3 \
+        ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
 
-# pip 버전 업그레이드 ---------------------------------------------------------
-RUN python -m pip install --upgrade pip setuptools wheel
-
-# 빌더 단계 결과 복사 ---------------------------------------------------------
+# 파이썬 패키지 설치 (로컬 wheel 사용)
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
+RUN pip install --no-index --find-links=/wheels -r requirements.txt \
+ && python -m spacy download en_core_web_sm \
+ && rm -rf /root/.cache/pip
 
-# 로컬 wheel만 사용해 의존성 설치 -------------------------------------------
-RUN pip install --no-index --find-links=/wheels -r requirements.txt
-
-# 프로젝트 복사 및 권한 설정 ---------------------------------------------------
-COPY ./config/docker/entrypoint.prod.sh $APP_HOME
-COPY . $APP_HOME
-RUN chown -R app:app $APP_HOME
+# 프로젝트 복사
+COPY . .
+RUN useradd -m app \
+ && chown -R app:app /home/app
+RUN chmod +x config/docker/entrypoint.prod.sh
 USER app
 
 ENTRYPOINT ["sh", "config/docker/entrypoint.prod.sh"]
