--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,3 +1,4 @@
+'''
 upstream WDYS {
   server web:8000;
 }
@@ -20,5 +21,60 @@ server {
   location /media/ {
     alias /home/app/web/media/;
   }
+  client_max_body_size 50M;
+}
+'''
+
+upstream WDYS {
+  server web:8000;
+}
+
+# 1. HTTP - 80번 포트
+server {
+  listen 80;
+  server_name api.whatdoyousing.com;
+
+  location / {
+    proxy_pass http://WDYS;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+  }
+
+  location /static/ {
+    alias /home/app/web/static/;
+  }
+
+  location /media/ {
+    alias /home/app/web/media/;
+  }
+
+  client_max_body_size 50M;
+}
+
+
+# 2. HTTPS - 443번 포트 + 인증서 설정 추가
+server {
+  listen 443 ssl;
+  server_name api.whatdoyousing.com;
+
+  ssl_certificate /etc/letsencrypt/live/api.whatdoyousing.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/api.whatdoyousing.com/privkey.pem;
+
+  location / {
+    proxy_pass http://WDYS;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+  }
+
+  location /static/ {
+    alias /home/app/web/static/;
+  }
+
+  location /media/ {
+    alias /home/app/web/media/;
+  }
+
   client_max_body_size 50M;
 }
