--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -33,7 +33,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install --no-index --find-links=/wheels -r requirements.txt \
- && python -m spacy download en_core_web_sm \
+ #&& python -m spacy download en_core_web_sm \
  && rm -rf /root/.cache/pip
 
 # 프로젝트 복사
